* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Update concat version in metadata.json & build/rpm_metadata/requires

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Update puppet dependency and remove OBE pe dependency in metadata.json

* Fri Dec 16 2016 Trevor Vaughan <tvaughan@onyxpoinit.com> - 6.0.0-0
- Puppet 4 update
- Added strong typing
- Converted to using puppetlabs-concat

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
- Fix dependancies for simp 6 bump

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Minor cleanup

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 3.0.0-3
- migration to simplib and simpcat (lib/ only)

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-2
- Changed puppet-server requirement to puppet

* Sun Jun 22 2014 Kendall Moore <kmoore@keywcorp.com> - 3.0.0-1
- Removed MD5 file checksums for FIPS compliance.

* Thu Jun 19 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-1
- Updated to not cast lpattern to an Array in tcpwrappers.allow.erb
  for compatibility with Ruby 2.

* Wed Apr 30 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-0
- Updated to use an array for the allow and to use the new ipaddresses function
  in common to provide all local addresses to the initial line.

* Thu Jan 09 2014 Nick Markowski <nmarkowski@keywcorp.com> - 2.1.0-0
- Updated module for puppet3/hiera compatibility, and optimized code for lint tests,
  and puppet-rspec.
- Removed tcpwrappers::tcpwrappers_allow

* Tue Oct 08 2013 Kendall Moore <kmoore@keywcorp.com> - 2.0.0-8
- Updated all erb templates to properly scope variables.

* Fri Aug 02 2013 Kendall Moore <kmoore@keywcorp.com> -2.0.0-7
- Updated the tcpwrappers.allow template because function calls require